# IOLITE-C-SHARP-Plugin

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  IOLITE-C-SHARP-Plugin.sln  Makefile  README.md  cmake_install.cmake  windows-toolchain.cmake
IOLITE_Library/: CharacterControllerScript.cs  Class1.cs  HowToBuild.txt  IOLITE_Library.cs
MyDotNetLibOutput/: IOLITE_Library.deps.json
dotnetHost/: CMakeLists.txt  Makefile  cmake_install.cmake  dotnetHost.cpp  dotnetHost.h
dotnetHost/libs/: nethost.lib
iolite_api/: CMakeLists.txt  Makefile  cmake_install.cmake  iolite_api.cpp
